fix jump to currweek btn font

--- a/_sass/custom/course_overrides.scss
+++ b/_sass/custom/course_overrides.scss
@@ -36,4 +36,5 @@
 #schedule .btn-currentweek {
   font-size: 1rem;
   margin-left: 1rem;
+  font-family: $body-font-family;
 }
